Fixed bugs (footer, auto-collapse/expand, etc).

--- a/website/create/static/create.css
+++ b/website/create/static/create.css
@@ -72,6 +72,7 @@
     background-color: white;
     padding: 40px;
     overflow: scroll;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
 }
 
 .tree-form {
